# rust_file_upload_app

./: .gitignore  Cargo.toml
src/: appstate.rs  main.rs  upload.rs
src/file_upload_service/: appstate.rs  mod.rs  upload.rs
