[package]
name = "file_upload"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = { version = "4.9.0", default-features = false, features = ["macros"] }
env_logger = "0.11.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
